samples/_failures_safe/1761349708_cd7897_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_29ef45a0.c: In function ‘main’:
./samples/SAFE/__tmp_29ef45a0.c:157:21: error: expected ‘)’ at end of input
  157 |         if (c != 'a'
      |            ~        ^
      |                     )
./samples/SAFE/__tmp_29ef45a0.c:157:9: error: expected declaration or statement at end of input
  157 |         if (c != 'a'
      |         ^~
./samples/SAFE/__tmp_29ef45a0.c:157:9: error: expected declaration or statement at end of input
